@@ -3,11 +3,24 @@ JLINK_VM_OPTIONS="\
 --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+--add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
+--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
 --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
---add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED \
+--add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
 DIR=`dirname $0`
-CLASSPATH_OPTIONS="-classpath $DIR/classpath/gson-2.8.9.jar:$DIR/classpath/protobuf-java-3.19.6.jar:$DIR/classpath/jls.jar"
-$DIR/linux/bin/java $JLINK_VM_OPTIONS $CLASSPATH_OPTIONS $@
+"$DIR/linux/bin/java" $JLINK_VM_OPTIONS -classpath "$DIR/classpath/*" "$@"
